opentreemap/treemap/css/sass/partials/pages/_treedetails.scss
// Partial: Tree Detail Pages

.tree-details {
    h3 {
        color: #56abb2;
        font-size: 2.4rem;
        font-weight: 300;
        line-height: 3rem;
        margin: 25px 0 10px;
    }

    .detail-header {
        height: 85px;
        margin-bottom: 30px;

        @include select-none;

        .common-name {
            margin-bottom: 5px;
            line-height: 3.2rem;

            > #favorite-star {
                font-size: 2.1rem;
                line-height: 3.6rem;
                cursor: pointer;

                &.favorited {
                    color: #e0c122;
                }
            }
        }
        .address {
            color: $subtext-color;
            font-size: 1.4rem;
        }
        .share {
            float: right;
            margin-right: 5px;
        }
    }
}

#map-feature-form {
    margin-top: 0;

    table {
        > tbody {
            > tr {
                > td:first-child {
                    width: 45%;
                    vertical-align: middle;
                }

                &.diameter-row {
                    td:first-child {
                        vertical-align: top;
                    }
                }
            }
        }
    }

    #resource-details {
        table {
            > tbody {
                > tr {
                    > td:first-child {
                        width: 65%;
                        vertical-align: middle;
                    }
                }
            }
        }
    }
}

.map-small,
.street-view-small {
    background: $well-color;
    width: auto;
    height: 220px;
    min-width: 100%;
    margin-bottom: 15px;
    border-radius: 9px;
}

// Needed because bootstrap breaks street view on firefox
// by setting max-width: 100% on all <img> tags
.street-view-small img {
    max-width: none;
}

#sidebar {
    margin-top: 20px;
}

#tree-photo-thumbnails {
    max-height: 50px;

    > div {
        overflow: hidden;

        .carousel-indicators {
            display: inline-block;
            position: static;
            margin: 0 ;
            white-space: nowrap;
            height: 50px;
            width: auto;

            &:empty {
                display: none;
            }

            li {
                text-indent: 0;
                border: 1px solid $light-gray-color;
                width: 48px;
                height: 48px;
                border-radius: 4px;
                margin-left: 0;
                margin-right: 5px;
                overflow: hidden;
                opacity: 0.65;
                cursor: pointer;
                float: none;
                display: inline-block;

                &.active {
                    opacity: 1;
                }
                &:hover {
                    opacity: 0.9;
                }

                img {
                    height: 50px;
                    margin: 0 auto;
                    display: block;
                    max-width: none;
                    min-width: 50px;
                }
            }
        }
    }
}

#photo-carousel {
    .carousel-inner {
        margin-bottom: 10px;
        height: 225px;
        overflow: hidden;
        border: none;
        background: darken($light-gray-color, 5%);
        border-radius: 9px;

        .item {
            img {
                width: auto;
                height: auto;
                margin: 0 auto;
            }
        }
    }
    > a.carousel-control {
        left: 0;
        width: 50px;
        height: 50px;
        margin-top: -25px;
        font-size: 4.0rem;
        line-height: normal;
        text-align: center;
        background: transparent;
        border: none;
        display: block;
        border-radius: 0;
        opacity: 0.5;
        color: #42424a;
        top: 38%;

        &.right {
            left: auto;
            right: 5px;
        }
        &:hover {
            opacity: 0.9;
            color: #42424a;
        }
        &.disabled {
            opacity: 0.05;

            &:hover {
                opacity: 0.05;
                color: #42424a;
            }
        }

        > i {
            display: block;
        }
    }

    + button {
        position: absolute;
        top: 190px;
        left: 22px;
        opacity: 0.85;
        background: black;
        opacity: 0.5;
        width: auto;
        background: black;
        color: white;
        border: none;
        transition: opacity 0.3s;
        z-index: 999;
        padding: 5px 12px;
        font-size: 1.2rem !important;
        border-radius: 6px;

        &:hover {
            opacity: 0.85;
            background: black;
        }
    }
    &:hover + button {
        opacity: 0.85;
        background: black;
    }
}

